[gd_scene load_steps=5 format=3 uid="uid://w2kwt5tw57c2"]

[ext_resource type="Script" path="res://Scripts/sample_scene.gd" id="1_0d87x"]
[ext_resource type="Texture2D" uid="uid://b3ba126bosape" path="res://Assets/background.png" id="1_t6dsg"]
[ext_resource type="Script" path="res://Scripts/live_audio.gd" id="2_gqgln"]

[sub_resource type="AudioStreamMicrophone" id="1"]

[node name="sample_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="content" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0d87x")

[node name="mic_input" type="AudioStreamPlayer" parent="content"]
stream = SubResource("1")
autoplay = true

[node name="recording_player" type="AudioStreamPlayer" parent="content"]

[node name="ui" type="HBoxContainer" parent="content"]
layout_mode = 2

[node name="live_audio" type="VBoxContainer" parent="content/ui"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_gqgln")

[node name="controls" type="HBoxContainer" parent="content/ui/live_audio"]
layout_mode = 2

[node name="samples_control" type="HBoxContainer" parent="content/ui/live_audio/controls"]
layout_mode = 2

[node name="samples_label" type="Label" parent="content/ui/live_audio/controls/samples_control"]
layout_mode = 2
text = "Samples"
horizontal_alignment = 1

[node name="samples_spinbox" type="SpinBox" parent="content/ui/live_audio/controls/samples_control"]
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 10.0
rounded = true

[node name="amplification_control" type="HBoxContainer" parent="content/ui/live_audio/controls"]
layout_mode = 2

[node name="amp_label" type="Label" parent="content/ui/live_audio/controls/amplification_control"]
layout_mode = 2
text = "Amplification"
horizontal_alignment = 1

[node name="amp_spinbox" type="SpinBox" parent="content/ui/live_audio/controls/amplification_control"]
layout_mode = 2
max_value = 5.0
step = 0.2
value = 1.0

[node name="monitors" type="HBoxContainer" parent="content/ui/live_audio"]
layout_mode = 2
size_flags_vertical = 3

[node name="volume_monitor" type="VBoxContainer" parent="content/ui/live_audio/monitors"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="volume_bar" type="TextureProgressBar" parent="content/ui/live_audio/monitors/volume_monitor"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
max_value = 1.0
step = 0.01
fill_mode = 4
nine_patch_stretch = true
stretch_margin_left = 20
stretch_margin_top = 20
stretch_margin_right = 20
stretch_margin_bottom = 20
texture_under = ExtResource("1_t6dsg")

[node name="volume_value" type="Label" parent="content/ui/live_audio/monitors/volume_monitor"]
layout_mode = 2
text = "0.0db"
horizontal_alignment = 1

[node name="volume_label" type="Label" parent="content/ui/live_audio/monitors/volume_monitor"]
layout_mode = 2
text = "Approx. Volume"
horizontal_alignment = 1

[connection signal="value_changed" from="content/ui/live_audio/controls/amplification_control/amp_spinbox" to="content" method="_on_amp_spinbox_value_changed"]
